# ADSMOD-Adsorption-Modeling

./: .dockerignore  .gitignore  ARCHITECTURE.md  README.md  REPOSITORY_TO_MERGE.md  docker-compose.yml  implementation_plan.md  pyproject.toml  run_tests.bat  setup_and_maintenance.bat  start_all_on_windows.bat  start_core_on_windows.bat  start_ml_on_windows.bat  start_on_windows.bat  verify_device_loader.py
.agent/: ARCHITECTURE.md  GENERAL_RULES.md  PACKAGING_AND_RUNTIME_MODES.md
.agent/rules/: BACKGROUND_JOBS.md  GENERAL_RULES.md  GUIDELINES_TESTS.md
.github/workflows/: ci.yml
ADSMOD/: build_with_tauri.bat  setup_and_maintenance.bat  start_on_windows.bat
ADSMOD/client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ADSMOD/client/src-tauri/: Cargo.toml  tauri.conf.json
ADSMOD/client/src-tauri/icons/: icon.icns
ADSMOD/client/src-tauri/src/: main.rs
ADSMOD/scripts/: build_backend_sidecar.py  capture_docs_screenshots.py  initialize_database.py
ADSMOD/server/: __init__.py  app.py  desktop_entrypoint.py
ADSMOD/settings/: .env  .env.cloud.example  .env.local.example  .env.local.tauri.example  configurations.json  server_configurations.json
ADSMOD/tests/: conftest.py  run_tests.bat
app/client/: .env  angular.json  package-lock.json  package.json  playwright.config.ts  proxy.conf.cjs  tsconfig.app.json  (+4 more)
app/server/: __init__.py  app.py  pyproject.toml
app/server/api/: datasets.py  entrypoint.py  fitting.py  nist.py  training.py
app/server/common/: constants.py
app/server/common/utils/: logger.py  variables.py
app/server/configurations/: __init__.py  environment.py  management.py  startup.py
app/server/core_service/: pyproject.toml
app/server/core_service/core_service/: app.py
app/server/core_service/core_service/api/: datasets.py  entrypoint.py  fitting.py  nist.py  routes.py
app/server/core_service/core_service/common/: constants.py
app/server/core_service/core_service/common/utils/: encoding.py  logger.py  security.py  types.py  variables.py
app/server/core_service/core_service/configurations/: __init__.py  environment.py  management.py  startup.py
app/server/core_service/core_service/domain/: bootstrap.py  datasets.py  fitting.py  models.py  nist.py  settings.py
app/server/core_service/core_service/services/: container.py  datasets.py  fitting.py  job_responses.py  jobs.py  nistads.py
app/server/core_service/core_service/services/data/: conversion.py  datasets.py  nist_service.py  nistads.py  processing.py
app/server/core_service/core_service/services/modeling/: fitting.py  models.py  nist_dataset.py
app/server/domain/: datasets.py  models.py  nist.py  settings.py
app/server/learning/: callbacks.py  device.py  loader.py  metrics.py
app/server/learning/models/: embeddings.py  encoders.py  qmodel.py
app/server/learning/training/: fitting.py  manager.py  worker.py
app/server/ml_service/: pyproject.toml
app/server/ml_service/ml_service/: app.py
app/server/ml_service/ml_service/api/: entrypoint.py  routes.py  training.py
app/server/ml_service/ml_service/common/: constants.py
app/server/ml_service/ml_service/common/utils/: encoding.py  logger.py  security.py  variables.py
app/server/ml_service/ml_service/configurations/: __init__.py  environment.py  management.py  settings.py  startup.py
app/server/ml_service/ml_service/domain/: bootstrap.py  jobs.py  training.py
app/server/ml_service/ml_service/learning/: callbacks.py  device.py  loader.py  metrics.py
app/server/ml_service/ml_service/learning/models/: embeddings.py  encoders.py  qmodel.py  transformers.py
app/server/ml_service/ml_service/learning/serialization/: model.py  training.py
app/server/ml_service/ml_service/learning/training/: __init__.py  fitting.py  manager.py  scheduler.py  worker.py
app/server/ml_service/ml_service/services/: composition.py  container.py  job_responses.py  jobs.py  training.py
app/server/ml_service/ml_service/services/data/: builder.py  composition.py  conversion.py  datasets.py  nist_service.py  nistads.py  processing.py  sanitizer.py  sequences.py
app/server/repositories/database/: __init__.py  backend.py  initializer.py  postgres.py  sql.py  sqlite.py
app/server/repositories/queries/: __init__.py  data.py  nist.py  training.py
app/server/repositories/schemas/: __init__.py  models.py
app/server/repositories/serialization/: data.py  model.py  normalization.py  training.py
app/server/scripts/: generate_openapi.py
app/server/services/: fitting.py  job_responses.py  jobs.py  training.py
app/server/services/data/: builder.py  composition.py  conversion.py  datasets.py  nist_service.py  nistads.py  processing.py  sanitizer.py  sequences.py
app/server/services/modeling/: fitting.py  models.py  nist_dataset.py
app/server/shared/: pyproject.toml
app/server/shared/shared/common/: constants.py  env.py  model_schemas.py  pathing.py  paths.py  settings.py
app/server/shared/shared/common/utils/: logger.py  variables.py
app/server/shared/shared/repositories/database/: __init__.py  backend.py  initializer.py  postgres.py  sql.py  sqlite.py  upsert.py  utils.py
app/server/shared/shared/repositories/queries/: __init__.py  data.py  nist.py  training.py
app/server/shared/shared/repositories/schemas/: __init__.py  models.py  types.py
app/server/shared/shared/repositories/serialization/: data.py  normalization.py
app/server/shared/shared/schemas/: settings.py
app/server/shared/shared/services/: __init__.py  jobs.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: PACKAGING_AND_RUNTIME_MODES.md
legacy/: .gitignore  pyproject.toml
settings/: .env  core_service.json
tests/: conftest.py  run_tests.bat
(+470 files in other folders)
