[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ADSMOD"
version = "2.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.32.1",
    "torch==2.10.0+cu130",
    "keras==3.13.1", 
    "scikit-learn==1.8.0",    
    "numpy==2.3.3",
    "pandas==2.3.3",
    "tqdm==4.67.1",
    "SQLAlchemy==2.0.41",
    "psycopg[binary]==3.3.1",
    "python-dotenv==1.1.0",
    "httpx==0.27.2",    
    "python-multipart==0.0.12",
    "aiohttp==3.13.3",   
    "PubChemPy==1.0.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-playwright>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["adsmod"] 

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true 

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
# torchvision = { index = "pytorch-cu130" }
# torchaudio  = { index = "pytorch-cu130" }
