[project]
name = "adsmod-backend-workspace"
version = "2.3.0"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-playwright>=0.5.0",
    "psutil>=6.1.1",
    "ruff==0.15.9"
]

[tool.uv.workspace]
members = [
    "shared",
    "core_service",
    "ml_service"
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
