[project]
name = "adsmod-core-service"
version = "2.3.0"
requires-python = ">=3.14"
dependencies = [
    "adsmod-shared",
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "python-dotenv==1.2.1",
    "httpx==0.27.2",
    "python-multipart==0.0.12",
    "aiohttp==3.13.3",
    "PubChemPy==1.0.5",
    "numpy==2.4.1",
    "pandas==3.0.1",
    "tqdm==4.67.1"
]

[tool.uv.sources]
adsmod-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["core_service"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"
