[project]
name = "adsmod-ml-service"
version = "2.3.0"
requires-python = ">=3.14"
dependencies = [
    "adsmod-shared",
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "torch==2.10.0+cu130",
    "keras==3.13.1",
    "scikit-learn==1.8.0",
    "numpy==2.4.1",
    "pandas==3.0.1",
    "tqdm==4.67.1",
    "python-dotenv==1.2.1",
    "httpx==0.27.2",
    "python-multipart==0.0.12",
    "aiohttp==3.13.3",
    "PubChemPy==1.0.5"
]

[tool.uv.sources]
adsmod-shared = { workspace = true }
torch = { index = "pytorch-cu130" }

[tool.hatch.build.targets.wheel]
packages = ["ml_service"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"
