[project]
name = "adsmod-shared"
version = "2.3.0"
requires-python = ">=3.14"
dependencies = [
    "SQLAlchemy==2.0.46",
    "psycopg[binary]==3.3.1",
    "python-dotenv==1.2.1",
    "numpy==2.4.1",
    "pandas==3.0.1"
]

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"
